# HPAC

./: README.md  setup.sh
approx/: CMakeLists.txt  Makefile
approx/approx_utilities/: CMakeLists.txt  benchmark.py  configure.py  detect_arch.py
approx/approx_utilities/analysis_scripts/: concatenate.py  read.py  viz_CFD.py  viz_HPCCG.py  viz_Kmeans.py  viz_blackscholes.py  viz_leukocyte.py  viz_lulesh.py  viz_pFilter.py
approx/approx_utilities/approx_space/large/: CalcElemCharacteristicLength.yaml  CalcElemFBHourglassForce.yaml  CalcElemShapeFunctionDerivatives2.yaml  CalcElemVolumeDerivative.yaml  CombineDerivativesAndNormals.yaml  approximate_techniques_hpccg.yaml  approximate_techniques_pFilter_likelihood.yaml
approx/approx_utilities/approx_space/small/: CalcElemCharacteristicLength.yaml  CalcElemShapeFunctionDerivatives2.yaml  CalcElemVolumeDerivative.yaml  CalcElemVolumeKinematics.yaml  CombineDerivativesAndNormals.yaml  approximate_techniques.yaml  approximate_techniques_hpccg.yaml  approximate_techniques_pFilter_likelihood.yaml
approx/approx_utilities/benchmarks/: CMakeLists.txt
approx/approx_utilities/benchmarks/patches/: HPCCG.patch  blackscholes.patch  kmeans.patch  lavaMD.patch  lulesh.patch  particlefilter.patch
approx/approx_utilities/examples/: blackscholes.sh  cfd.sh  hpccg.sh  kmeans.sh  lavaMD.sh  leukocyte.sh  lulesh.sh  pFilter.sh
approx/approx_utilities/libraries/: CMakeLists.txt  IO.cpp  IO.hpp  common.h  datautils.cpp  datautils.hpp  executionTime.h  metrics.cpp  metrics.hpp  mp_math.cpp  mp_math.hpp  quality.cpp  quality.py
approx/runtime/: CMakeLists.txt  approx.h  approx_runtime.cpp
approx/runtime/src/: CMakeLists.txt  approx_compute_mape.h  approx_data_move.cpp  approx_data_util.cpp  approx_data_util.h  approx_dev_runtime.cpp  approx_device_memo_table.h  approx_internal.h  approx_memoize_iact_in.cpp  approx_memoize_iact_in.h  approx_memoize_out.cpp  approx_perforate.cpp  approx_runtime.cpp  device_intrinsics.h  thread_storage.h
approx/runtime/src/include/: approx.h  approx_debug.h
clang/include/clang-c/: Index.h
clang/include/clang/AST/: ASTContext.h  ASTNodeTraverser.h  ApproxClause.h  BuiltinTypes.def  ComputeDependence.h  DeclApprox.h  DeclVisitor.h  ExprApprox.h  RecursiveASTVisitor.h  StmtApprox.h  StmtVisitor.h  TextNodeDumper.h
clang/include/clang/ASTMatchers/: ASTMatchers.h
clang/include/clang/Basic/: Approx.h  DeclNodes.td  DiagnosticParseKinds.td  DiagnosticSemaKinds.td  LangOptions.def  StmtNodes.td  TokenKinds.def  approxTypes.def
clang/include/clang/Driver/: Driver.h  Options.td
clang/include/clang/Parse/: Parser.h
clang/include/clang/Sema/: Sema.h
clang/include/clang/Serialization/: ASTBitCodes.h
clang/lib/AST/: ASTContext.cpp  ASTStructuralEquivalence.cpp  ApproxClause.cpp  CMakeLists.txt  ComputeDependence.cpp  DeclApprox.cpp  DeclBase.cpp  DeclPrinter.cpp  Expr.cpp  ExprApprox.cpp  ExprClassification.cpp  ExprConstant.cpp  ItaniumMangle.cpp  NSAPI.cpp  Stmt.cpp  StmtApprox.cpp  StmtPrinter.cpp  StmtProfile.cpp  TextNodeDumper.cpp  Type.cpp  TypeLoc.cpp
clang/lib/CodeGen/: CGApproxRuntime.cpp  CGApproxRuntime.h  CGApproxRuntimeGPU.cpp  CGDecl.cpp  CGExpr.cpp  CGOpenMPRuntime.cpp  CGOpenMPRuntime.h  CGOpenMPRuntimeGPU.cpp  CGOpenMPRuntimeGPU.h  CGStmt.cpp  CGStmtApprox.cpp  CGStmtOpenMP.cpp  CMakeLists.txt  CodeGenFunction.h  CodeGenModule.cpp  CodeGenModule.h
clang/lib/Driver/ToolChains/: Clang.cpp
clang/lib/Frontend/: CompilerInvocation.cpp  InitPreprocessor.cpp
clang/lib/Parse/: CMakeLists.txt  ParseApprox.cpp  ParseExpr.cpp  ParsePragma.cpp  ParseStmt.cpp  Parser.cpp
clang/lib/Sema/: CMakeLists.txt  SemaApprox.cpp  SemaExceptionSpec.cpp  SemaExpr.cpp  SemaTemplateInstantiateDecl.cpp  TreeTransform.h
clang/lib/Serialization/: ASTCommon.cpp  ASTReader.cpp  ASTReaderDecl.cpp  ASTReaderStmt.cpp  ASTWriterDecl.cpp  ASTWriterStmt.cpp
clang/lib/StaticAnalyzer/Core/: ExprEngine.cpp
clang/tools/libclang/: CIndex.cpp  CXCursor.cpp
llvm/: CMakeLists.txt
llvm/projects/: CMakeLists.txt
openmp/libomptarget/include/: omptarget.h
openmp/libomptarget/src/: api.cpp  exports
openmp/runtime/src/: dllexports  kmp_ftn_entry.h  kmp_ftn_os.h
