set(APPROX_INSTALL_LIBDIR "lib${LLVM_LIBDIR_SUFFIX}")
set(LIBAPPROX_BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(LIBAPPROX_SRC_DIR ${LIBAPPROX_BASE_DIR}/src)
set(LIBAPPROX_INC_DIR ${LIBAPPROX_SRC_DIR}/include)
set(LIBAPPROX_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})

set(LIBAPPROX_INSTALL_KIND LIBRARY)
set(LIBAPPROX_DEFAULT_LIB_NAME libapprox)

set(LIBAPPROX_ENABLE_SHARED TRUE CACHE BOOL
  "Shared library instead of static library?")

if(${LIBAPPROX_ENABLE_SHARED})
  set(LIBAPPROX_LIBRARY_SUFFIX ${CMAKE_SHARED_LIBRARY_SUFFIX})
  set(LIBAPPROX_LIBRARY_KIND SHARED)
  set(LIBAPPROX_INSTALL_KIND LIBRARY)
else()
  set(LIBAPPROX_LIBRARY_SUFFIX ${CMAKE_STATIC_LIBRARY_SUFFIX})
  set(LIBAPPROX_LIBRARY_KIND STATIC)
  set(LIBAPPROX_INSTALL_KIND ARCHIVE)
endif()

set(LIBAPPROX_LIB_FILE ${LIBAPPROX_DEFAULT_LIB_NAME}${LIBAPPROX_LIBRARY_SUFFIX})

add_subdirectory(src)
